compiler/testData/cli/jvm/explicitlyDisableSamConversionsWithOldFlag.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:-SamConversionForKotlinFunctions

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/newInferenceImpliesSamConversions.kt:4:9: error: type mismatch: inferred type is () -> Unit but Runnable was expected
    foo { }
        ^^^
COMPILATION_ERROR
